--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <body>
         <div id="overlay" class="overlay">
             <div class="overlay-body">
-                <p class="overlay-title">Cookies and user-generated content</p>
+                <p class="overlay-title">Файлы cookie и пользовательский контент</p>
 
                 <p class="overlay-description">Этот сайт использует файлы cookie, чтобы предложить вам наиболее актуальную информацию и
                                                лучше понять, как вы используете этот сайт. Пожалуйста, примите файлы cookie для
